  through the Reflection API. (Sebastian)
- Added Collator::getSortKey for intl extension. (Stas)
  
- Implemented FR #49571 (CURLOPT_POSTREDIR not implemented). (Sriram Natarajan)
- Implemented FR #49253 (added support for libcurl's CERTINFO option).
  (Linus Nielsen Feltzing <linus@haxx.se>)

- Fixed memory leak in extension loading when an error occurs on Windows.
  (Pierre)

- Fixed bug #50023 (pdo_mysql doesn't use PHP_MYSQL_UNIX_SOCK_ADDR). (Ilia)
- Fixed bug #49908 (throwing exception in __autoload crashes when interface
  is not defined). (Felipe)
- Fixed bug #49719 (ReflectionClass::hasProperty returns true for a private 
  property in base class). (Felipe)
- Fixed bug #49142 (crash when exception thrown from __tostring()).
  (David Soria Parra)
- Fixed bug #49990 (SNMP3 warning message about security level printed twice).
  (Jani)
- Fixed bug #49985 (pdo_pgsql prepare() re-use previous aborted
  transaction). (ben dot pineau at gmail dot com, Ilia)  
- Fixed bug #49921 (Curl post upload functions changed). (Ilia)
- Fixed bug #49855 (import_request_variables() always returns NULL). (Ilia,
  sjoerd at php dot net)
- Fixed bug #49800 (SimpleXML allow (un)serialize() calls without warning).
  (Ilia, wmeler at wp-sa dot pl)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49244 (Floating point NaN cause garbage characters). (Sjoerd)
- Fixed bug #49224 (Compile error due to old DNS functions on AIX systems).
  (Scott)

?? ??? 2009, PHP 5.3.1
# Will be merged in from branches/PHP_5_3_1 once released
# Pleas add stuff under 5.3.2

30 Jun 2009, PHP 5.3.0
- Upgraded bundled PCRE to version 7.9. (Nuno)
- Upgraded bundled sqlite to version 3.6.15. (Scott)

- Moved extensions to PECL (Derick, Lukas, Pierre, Scott):
  . ext/dbase
  . ext/fbsql
  . ext/fdf
  . ext/ncurses
  . ext/mhash (BC layer is now entirely within ext/hash)
  . ext/ming
  . ext/msql
  . ext/sybase (not maintained anymore, sybase_ct has to be used instead)
